# deluge-compat

./: .coverage  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: debug_test.py  http_example.py  test_example.py  translate_example.py
src/deluge_compat/: __init__.py  functions.py  runtime.py  translator.py  types.py
tests/: __init__.py  test_functions.py  test_integration.py  test_runtime.py  test_showcase.py  test_translation_api.py  test_translator.py  test_types.py
